# fetch-series

./: LICENCE  pyproject.toml
notebooks/: test_bs_retrieval.ipynb
src/fetch_series/: __init__.py  __main__.py  core.py
tests/: test_eutils.py
