[project]
name = "fetch-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "httpx-retries>=0.4.6",
    "typer>=0.24.1",
]

[build-system]
requires = ["uv_build>=0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
notebooks = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "python-irodsclient>=3.2.0",
    "tqdm>=4.67.3",
]

[project.scripts]
fetch = "fetch_series.__main__:main"
